<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home"
            android:title="@string/slidebar_home" />
        <item
            android:id="@+id/nav_job_orders"
            android:icon="@drawable/menu_box"
            android:title="@string/slidebar_job_order" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/menu_profile"
            android:title="@string/slidebar_my_profile"
            android:visible="false"/>
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/menu_profile"
            android:title="@string/slidebar_login" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/menu_settings"
            android:title="@string/slidebar_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/menu_help"
            android:title="@string/slidebar_help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/menu_logout"
            android:title="@string/slidebar_logout" />
    </group>
</menu>
