<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:text="@string/login"
        android:layout_marginBottom="12dp"
        android:textStyle="bold"
        android:textColor="@color/Black"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:text="@string/login_username"
        android:textStyle="bold"/>/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/login_username"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:text="@string/login_password"
        android:textStyle="bold"/>/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/login_password"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/login_button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:textColor="@color/White"
        android:textSize="14dp"
        android:layout_gravity="center"/>

</LinearLayout>