<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <TextView
                android:id="@+id/type_text"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/type"
                android:textSize="18dp"
                android:textStyle="bold"/>
            <Spinner
                android:background="@drawable/dropdown"
                android:layout_marginTop="4dp"
                android:id="@+id/spinner_status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="18dp"
                android:textStyle="bold"/>
            <EditText
                android:layout_marginTop="4dp"
                android:id="@+id/stop_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="15dp"
                android:editable="false"
                />
            <TextView
                android:id="@+id/warning1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/ras_fieldrequired"
                android:textSize="10dp"
                android:textColor="@color/DangerColor"
                android:textAlignment="textEnd"
                />
            <TextView
                android:id="@+id/cp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp"
                android:textSize="18dp"
                android:textStyle="bold"/>
            <Spinner
                android:background="@drawable/dropdown"
                android:id="@+id/ras_principle_dropdown"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="8dp"
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_profile_name"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_marginLeft="8dp"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ras_principle_name"
                android:singleLine="true"/>
            <TextView
                android:id="@+id/warning2"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/ras_fieldrequired"
                android:textSize="10dp"
                android:textColor="@color/DangerColor"
                android:textAlignment="textEnd"
                />
            <TextView
                android:layout_marginLeft="8dp"
                android:id="@+id/phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_profile_phone"
                android:textStyle="bold"/>
            <EditText
                android:layout_marginLeft="8dp"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/ras_principle_cp"
                android:singleLine="true"/>
            <TextView
                android:id="@+id/warning3"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/ras_fieldrequired"
                android:textSize="10dp"
                android:textColor="@color/DangerColor"
                android:textAlignment="textEnd"
                />
            <TextView
                android:id="@+id/item_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_info"
                android:textSize="18dp"
                android:textStyle="bold"/>
            <EditText
                android:layout_marginTop="4dp"
                android:id="@+id/item"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:id="@+id/warning4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/ras_fieldrequired"
                android:textSize="10dp"
                android:textColor="@color/DangerColor"
                android:textAlignment="textEnd"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/remark_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remark"
                android:textSize="18dp"
                android:textStyle="bold"/>
            <EditText
                android:layout_marginTop="4dp"
                android:id="@+id/remark"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>