<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="huang.android.logistic_principle.Bantuan.HelpAndSupport">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/help_call_center"/>
    <TextView
        android:id="@+id/help1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/hns_l1"
        android:textColor="@color/Black"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/help2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/hns_l2"
        android:textColor="@color/Black"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/help_call"
            android:id="@+id/call"/>
        <TextView
            android:id="@+id/call_admin_text"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hns_call"
            android:textColor="@color/Black"
            android:textAlignment="center"/>

    </LinearLayout>

</LinearLayout>
