<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context="com.huang.android.logistic_principle.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:gravity="bottom"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <View
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@color/White"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/Black"/>
            <View
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="#fff"/>
        </LinearLayout>
        <EditText
            android:text=""
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:id="@+id/my_profile_username"
            android:layout_gravity="center"
            android:textColor="@color/Black"
            android:textColorHint="@color/Grey"
            android:singleLine="true"/>
        <EditText
            android:text=""
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/login_password"
            android:layout_gravity="center"
            android:textColor="@color/Black"
            android:textColorHint="@color/Grey"
            android:inputType="textPassword"
            android:singleLine="true"/>
        <ImageButton
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:background="@drawable/login_button"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:onClick="clicklogin"/>
        <TextView
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot"
            android:textColor="@color/White"
            android:textAlignment="center"/>
    </LinearLayout>

</LinearLayout>
