<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="6dp"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_principle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/principle_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dp_principleinfo"
                android:textSize="16dp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">
                <TextView
                    android:id="@+id/principle_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dp_principlename"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:text="CV. Vendor"
                    android:layout_marginRight="15dp"
                    android:id="@+id/principle_name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginBottom="4dp">
                <TextView
                    android:id="@+id/principle_cp_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dp_principlecpname"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:text="CV. Vendor"
                    android:layout_marginRight="15dp"
                    android:id="@+id/principle_cp_name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp">
                <TextView
                    android:id="@+id/principle_cp_phone_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dp_principlecpphone"/>
                <TextView
                    android:clickable="true"
                    android:textColor="@color/colorPrimaryDark2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:text="023842934234"
                    android:layout_marginRight="15dp"
                    android:id="@+id/principle_cp_phone"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>