<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="3dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_vendor"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/vendor_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dp_vendorinfo"
                android:textSize="16dp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">
                <TextView
                    android:id="@+id/vendor_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dp_vendorname"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:text="Going Merry"
                    android:layout_marginRight="15dp"
                    android:id="@+id/vendor_name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginBottom="4dp">
                <TextView
                    android:id="@+id/vendor_cp_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dp_vendorcpname"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:text="CV. Vendor"
                    android:layout_marginRight="15dp"
                    android:id="@+id/vendor_cp_name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginBottom="4dp">
                <TextView
                    android:id="@+id/vendor_cp_phone_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dp_vendorcpphone"/>
                <TextView
                    android:clickable="true"
                    android:textColor="@color/colorPrimaryDark2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:text="023842934234"
                    android:layout_marginRight="15dp"
                    android:id="@+id/vendor_cp_phone"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>